NLP - NER added using StanfordNER tagger. 1. Pre-trained sequential model in `resources/external_classifiers` 2. StanfordNER related jars in `resources/lib`